# ai-killswitch-protocol

./: .env.example  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  security.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
agents/: agent-registry.yaml  circuit-breaker.yaml  confidence-threshold.yaml  watchdog.yaml
digital-twins/: drift-detection.py  fhir-sync-validation.yaml  sim-guard.yaml  twin-registry.yaml
docs/: architecture-overview.md  compliance-mapping.md  threat-taxonomy.md
governance/: audit-log-schema.yaml  data-retention-policy.md  incident-response-template.md  roles-and-permissions.yaml
integrations/: alert-dispatcher.py  epic-webhook.yaml  fhir-r4-client.py  iot-validator.py
protocol/: escalation-tiers.md  killswitch-policy.yaml  override-procedures.md  reinstatement-checklist.md
tests/: conftest.py  test_drift_detection.py  test_iot_validator.py
