[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-killswitch-protocol"
version = "1.0.0"
description = "Kill Switch Protocol for AI Agents and Healthcare Digital Twins — governance, halt triggers, drift detection, and IoT stream validation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "John Faulkner", email = "john@thefaulknergroupadvisors.com" },
]
keywords = [
  "ai-safety",
  "kill-switch",
  "healthcare-ai",
  "digital-twin",
  "fhir",
  "governance",
  "agentic-ai",
  "womens-health",
  "hipaa",
  "drift-detection",
  "iot-validation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/jsfaulkner86/ai-killswitch-protocol"
Repository = "https://github.com/jsfaulkner86/ai-killswitch-protocol"
Issues = "https://github.com/jsfaulkner86/ai-killswitch-protocol/issues"
"The Faulkner Group" = "https://thefaulknergroupadvisors.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["integrations*", "digital_twins*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B"]
ignore = [
  "B008",
  "E501",
  "E402",
  "W291",
  "W293",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "F401"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
